--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <p>Hi I am Hassan</p>
-    <p>Don't be afraid in life</p>
+    <p>Add new feature (dropdown)</p>
   </body>
 </html>
